<resources>
    <string name="app_name">HITAM Student</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="close">Close</string>
    <string name="assignments">Assignments</string>
    <string name="attendance">Attendance</string>
    <string name="syllabus">Syllabus</string>
    <string name="academic_calendar">Academic Calendar</string>
    <string name="e_books">e-Books</string>
    <string name="home">Home</string>
    <string name="notice">Notice</string>
    <string name="faculty">Faculty</string>
    <string name="gallery">Gallery</string>
    <string name="about">About</string>
    <string name="todo">TODO</string>

    <string name="address">
        Address: Gowdavelly (Village), Medchal (Mandal), Medchal-Malkajgiri (Dist.), Telangana,India - 501401
    </string>
    <string name="phone">
        Phone: 9247001102
    </string>
    <string name="website">
        Website: info@hitam.com
    </string>

    <string name="contacts">Contact Details</string>
    <string name="departments">DEPARTMENTS</string>
    <string name="computer_science">Computer Science</string>
    <string name="electrical_and_electronics_engineering">Electrical and Electronics Engineering</string>
    <string name="mechanical_engineering">Mechanical Engineering</string>
    <string name="electronics_and_communication_engineering">Electronics and Communication Engineering</string>
    <string name="enter_roll_number">Enter Roll Number</string>
    <string name="enter_password">Enter Password</string>
</resources>