<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/navigation_assignments"
        android:title="@string/assignments"
        android:icon="@drawable/assignment"/>

    <item android:id="@+id/navigation_attendance"
        android:title="@string/attendance"
        android:icon="@drawable/attendance"/>

    <item android:id="@+id/navigation_syllabus"
        android:title="@string/syllabus"
        android:icon="@drawable/syllabus"/>

    <item android:id="@+id/navigation_calendar"
        android:title="@string/academic_calendar"
        android:icon="@drawable/calendar"/>

    <item android:id="@+id/navigation_library"
        android:title="@string/library_books_e_books"
        android:icon="@drawable/library"
        tools:ignore="HardcodedText" />

</menu>